# BoxMover-Master-

./: cmd.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controle_robot/lib/controle_robot/: control_node
install/controle_robot/share/controle_robot/: package.dsv  package.ps1  package.sh
log/: latest_build
src/articubot_one/config/: default.rviz
src/articubot_one/description/: camera.xacro  example_robot.urdf.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/articubot_one/launch/: robot_state_publisher.launch.py
src/articubot_one/maps/: map.pgm  map.yaml
src/controle_robot/: package.xml  setup.cfg  setup.py
src/controle_robot/controle_robot/: __init__.py
src/controle_robot/controle_robot/install/: local_setup.sh  setup.sh
src/controle_robot/controle_robot/log/: latest_build
src/controle_robot/install/: local_setup.sh  setup.sh
src/controle_robot/install/controle_robot/share/controle_robot/: package.bash  package.sh  package.zsh
src/controle_robot/log/: latest_build
src/my_robot/: package.xml  setup.cfg  setup.py
src/my_robot/my_robot/: movement_controller.py
